force-app/main/default/objects/ssot__JobPosition__dlm/fields/ssot__BusinessUnitId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BusinessUnitId__c</fullName>
    <label>Business Unit</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BusinessUnitId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>