force-app/main/default/objects/ssot__JobPosition__dlm/fields/ssot__HeldByEmployeeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__HeldByEmployeeId__c</fullName>
    <label>Held By Employee</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HeldByEmployeeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>