force-app/main/default/objects/ssot__JobPosition__dlm/fields/ssot__JobPositionStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__JobPositionStatus__c</fullName>
    <label>Job Position Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>JobPositionStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>