force-app/main/default/objects/ssot__JobPosition__dlm/fields/ssot__rel_1723128946960_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128946960_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JobPosition_LocationId_map_Location__rel</label>
    <referenceTo>ssot__Location__dlm</referenceTo>
    <relationshipLabel>JobPosition_LocationId_map_Location__rel</relationshipLabel>
    <relationshipName>rel_1723128946960_end</relationshipName>
    <type>Lookup</type>
</CustomField>