force-app/main/default/objects/ssot__JobPosition__dlm/fields/ssot__rel_1727366629540_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1727366629540_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JobPosition_ManagerId_map_Employee_I_rel</label>
    <referenceTo>ssot__Employee__dlm</referenceTo>
    <relationshipLabel>JobPosition_ManagerId_map_Employee_I_rel</relationshipLabel>
    <relationshipName>rel_1727366629540_end</relationshipName>
    <type>Lookup</type>
</CustomField>